--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1 class="header">BINUSMAYA SATISFACTORY FORM</h1>
+        <h1 class="header">BINUSMAYA SATISFACTORY SURVEY</h1>
     </header>
 
     <table class="table" border="0">
