--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <tr>
                 <td colspan="2">
                 <fieldset>
-                    <legend>How Satisfied Are You In BINUSMAYA?</legend>
+                    <legend>How Satisfied Are You With BINUSMAYA?</legend>
                     <div class="questions">
                     <p>1. Are You Happy With The Current State Of BINUSMAYA?</p>
                     <input type="radio" name="a1">
